updated notebook instruction

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -11,7 +11,7 @@
     "import torch\n",
     "import sys\n",
     "from IPython import get_ipython\n",
-    "sys.path.append('F:/f_users/heyuan/Git/KaggleChallenge')\n",
+    "sys.path.append('path_to_this_git')\n",
     "\n",
     "from data.dataHandler import dataLoader\n",
     "from API import TrainSegmentation, TestSegmentation, TrainClassification,TestClassification, CreateSubmission"
