updated readme and comments in notebook

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -22,7 +22,7 @@
    "id": "36b52d36",
    "metadata": {},
    "source": [
-    "Train on all BP-present images "
+    "Train with only BP-present images "
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "bf6d5640",
    "metadata": {},
    "source": [
-    "Transfer learning with more BP-absent Data"
+    "Transfer learning with entire dataset including BP-absent Images"
    ]
   },
   {
